# rotary-encoder-hal

./: .travis.yml  Cargo.toml  README.md  build.sh
.github/actions/: crosstest.yml
.github/workflows/: crosscompile.yml  crosstest.yml  linters.yml
examples/: encoder.rs
src/: lib.rs
tests/: test.rs
