[package]
name = "rotary-encoder-hal"
version = "0.3.0"
authors = ["Evan Cameron <cameron.evan@gmail.com>"]
edition = "2018"
description = "A simple platform agnostic rotary encoder library using embedded_hal"
keywords = ["embedded-hal", "driver", "rotary", "encoder"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/leshow/rotary-encoder-hal"

[dependencies]
embedded-hal = { version = "0.2", features = ["unproven"] }
either = { version = "1.6", default-features = false }

[dependencies.defmt]
version  = "0.1.2"
optional = true

[dependencies.embedded-hal-alpha]
package  = "embedded-hal"
version  = "=1.0.0-alpha.4"
optional = true

[dev-dependencies]
version-sync = "0.9"
cortex-m = "0.6"
cortex-m-rt = "0.6"
panic-semihosting = "0.5"
cortex-m-semihosting = "0.3"

[dev-dependencies.stm32f3xx-hal]
version = "0.5.0"
features = [ "rt", "stm32f303" ]

[features]
default = []
table-decoder = []
