[package]
name = "rotary-encoder-hal"
version = "0.5.0"
authors = ["Evan Cameron <cameron.evan@gmail.com>"]
edition = "2021"
description = "A simple platform agnostic rotary encoder library using embedded_hal"
keywords = ["embedded-hal", "driver", "rotary", "encoder"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/leshow/rotary-encoder-hal"

[dependencies]
embedded-hal = { version = "0.2", features = ["unproven"] }
either = { version = "1.6", default-features = false }

[dependencies.defmt]
version  = "0.1.2"
optional = true

[dependencies.embedded-hal-alpha]
package  = "embedded-hal"
version  = "=1.0.0-alpha.5"
optional = true

[dev-dependencies]
version-sync = "0.9"

[features]
default = []
table-decoder = []
