[package]
name = "rotary-encoder-hal"
version = "0.6.0"
authors = ["Evan Cameron <cameron.evan@gmail.com>"]
edition = "2021"
description = "A simple platform agnostic rotary encoder library using embedded_hal"
keywords = ["embedded-hal", "driver", "rotary", "encoder"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/leshow/rotary-encoder-hal"

[dependencies]
embedded-hal = { version = "1.0.0" }
either = { version = "1.6", default-features = false }

[dependencies.defmt]
version = "0.3.10"
optional = true

[dev-dependencies]
proptest = "1.3.1"
version-sync = "0.9"

[features]
default = []
table-decoder = []
